Get rid of maven and build jar with jarmaker. Updated readme